{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 17,
  "lineage": "9c4d373d-b316-e6c2-0f56-8f6eb1850b22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myekscluster_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382557570:internet-gateway/igw-0914eb20617d4fbe9",
            "id": "igw-0914eb20617d4fbe9",
            "owner_id": "992382557570",
            "tags": {
              "Name": "myekscluster-igw"
            },
            "tags_all": {
              "Name": "myekscluster-igw"
            },
            "vpc_id": "vpc-03aa62323e61b837a"
          },
          "dependencies": [
            "aws_vpc.myekscluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myekscluster_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382557570:route-table/rtb-0fb97ea492511242a",
            "id": "rtb-0fb97ea492511242a",
            "owner_id": "992382557570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0914eb20617d4fbe9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myekscluster-route-table"
            },
            "tags_all": {
              "Name": "myekscluster-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa62323e61b837a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myekscluster_igw",
            "aws_vpc.myekscluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072ad10304b311a0e",
            "route_table_id": "rtb-0fb97ea492511242a",
            "subnet_id": "subnet-00ea12448c96cd18e"
          },
          "dependencies": [
            "aws_internet_gateway.myekscluster_igw",
            "aws_route_table.myekscluster_route_table",
            "aws_subnet.myekscluster_subnet",
            "aws_vpc.myekscluster_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cddb1ed1a6402b7",
            "route_table_id": "rtb-0fb97ea492511242a",
            "subnet_id": "subnet-00091033434df2383"
          },
          "dependencies": [
            "aws_internet_gateway.myekscluster_igw",
            "aws_route_table.myekscluster_route_table",
            "aws_subnet.myekscluster_subnet",
            "aws_vpc.myekscluster_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myekscluster_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382557570:security-group/sg-04aff2614bfc3db7b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04aff2614bfc3db7b",
            "ingress": [],
            "name": "terraform-20240908064529183300000005",
            "name_prefix": "terraform-",
            "owner_id": "992382557570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myekscluster-cluster-sg"
            },
            "tags_all": {
              "Name": "myekscluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa62323e61b837a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myekscluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myekscluster_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382557570:security-group/sg-0898be973d3d99326",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0898be973d3d99326",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240908064529183800000006",
            "name_prefix": "terraform-",
            "owner_id": "992382557570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myekscluster-node-sg"
            },
            "tags_all": {
              "Name": "myekscluster-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aa62323e61b837a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myekscluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myekscluster_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382557570:subnet/subnet-00ea12448c96cd18e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ea12448c96cd18e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382557570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myekscluster-subnet-0"
            },
            "tags_all": {
              "Name": "myekscluster-subnet-0"
            },
            "vpc_id": "vpc-03aa62323e61b837a"
          },
          "dependencies": [
            "aws_vpc.myekscluster_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382557570:subnet/subnet-00091033434df2383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00091033434df2383",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382557570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myekscluster-subnet-1"
            },
            "tags_all": {
              "Name": "myekscluster-subnet-1"
            },
            "vpc_id": "vpc-03aa62323e61b837a"
          },
          "dependencies": [
            "aws_vpc.myekscluster_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myekscluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382557570:vpc/vpc-03aa62323e61b837a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae5e0062b4c503d3",
            "default_route_table_id": "rtb-0cbce7d2bd6a9ae78",
            "default_security_group_id": "sg-088f37a5516ab5aa1",
            "dhcp_options_id": "dopt-0374821fa40f81f10",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03aa62323e61b837a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cbce7d2bd6a9ae78",
            "owner_id": "992382557570",
            "tags": {
              "Name": "myekscluster-vpc"
            },
            "tags_all": {
              "Name": "myekscluster-vpc"
            }
          }
        }
      ]
    }
  ]
}